--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div class="container">
             <div class="nav">
                 <div class="logo-travel">
-                    <img src="im/Group%20(16).png" alt="">
+                    <img src="im/logo.png" alt="">
                 </div>
                 <div class="list-travel">
                     <ul>
